lab-networking/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-cluster-issuer # This annotation tells cert-manager to use the selfsigned-cluster-issuer defined in clusterissuer.yaml to generate a TLS certificate for this Ingress resource. The cert-manager will create a Certificate resource that references the ClusterIssuer, and it will generate a self-signed certificate for the hosts specified in the TLS section of this Ingress resource.
spec:
  ingressClassName: traefik # This should match the ingress class defined in the Traefik Ingress Controller deployment
  tls:
  - hosts:
    - app.demo.local
    - api.demo.local
    secretName: demo-tls

  rules:
  - host: app.demo.local # This should match the host defined in the TLS section above
    http:
      paths:
      - path: / # This means that any request to app.demo.local will be routed to the specified backend service
        pathType: Prefix # This means that any request to app.demo.local will be routed to the specified backend service
        backend:
          service:
            name: clusterip # This should match the name of the ClusterIP service defined in nginx_clusteri_noteport.yaml
            port:
              number: 80 # This should match the port defined in the ClusterIP service in nginx_clusteri_noteport.yaml

  - host: api.demo.local # This should match the host defined in the TLS section above
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: clusterip # This should match the name of the ClusterIP service defined in nginx_clusteri_noteport.yaml
            port:
              number: 80 # This should match the port defined in the ClusterIP service in nginx_clusteri_noteport.yaml
